database integrated image performance increased adjustment in ui are done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,18 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:name=".App"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <uses-permission android:name="android.permission.CAMERA" />
-        <uses-feature android:name="android.hardware.camera" />
+        <uses-feature android:name="android.hardware.camera"
+            />
 
+        <meta-data android:name="DATABASE" android:value="yardapplication.db" />
+        <meta-data android:name="VERSION" android:value="5" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.example" />
 
-        <activity android:name=".ui.activities.HomeScreenActivity">
+        <activity android:name=".ui.activities.HomeScreenActivity" android:screenOrientation="landscape">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +26,8 @@
         </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activities.CameraScreenActivity"/>
+        <activity android:name=".ui.activities.CameraScreenActivity"
+            android:screenOrientation="landscape"/>
 
     </application>
 
